--- a/index.html
+++ b/index.html
@@ -10,15 +10,8 @@
   <title>KavNav Realtime Map</title>
 
   <!-- Leaflet -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    crossorigin=""
-  ></script>
+  <link rel="stylesheet" href="./leaflet.css">
+<script src="./leaflet.js"></script>
 
   <style>
     html, body { height: 100%; margin: 0; font-family: -apple-system, system-ui, Arial; }
