--- a/index.html
+++ b/index.html
@@ -4,27 +4,55 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- חשוב ל-JS-Widgets (כמו בדוגמה שלך) -->
+  <!-- חשוב ל-JS-Widgets -->
   <meta name="js-widget-title" content="KavNav Realtime Map" />
 
   <title>KavNav Realtime Map</title>
 
-  <!-- Leaflet -->
+  <!-- Leaflet (local) -->
   <link rel="stylesheet" href="./leaflet.css">
-<script src="./leaflet.js"></script>
+  <script src="./leaflet.js"></script>
 
   <style>
     html, body { height: 100%; margin: 0; font-family: -apple-system, system-ui, Arial; }
     #map { height: 100%; width: 100%; }
+
     .hud {
       position: absolute; top: 10px; left: 10px; z-index: 9999;
       background: rgba(0,0,0,.72); color: #fff; padding: 10px 12px;
-      border-radius: 10px; max-width: 340px;
+      border-radius: 10px; max-width: 360px;
     }
-    .small { opacity: .9; font-size: 12px; }
+    .hud-top {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      justify-content: space-between;
+    }
+    .hud-title {
+      font-weight: 900;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 230px;
+    }
+
+    .small { opacity: .9; font-size: 12px; margin-top: 6px; }
     .ok { color: #9ef0a6; }
     .err { color: #ffb3b3; }
 
+    .btns { display:flex; gap:8px; }
+    button {
+      border: 0;
+      border-radius: 10px;
+      padding: 6px 10px;
+      font-weight: 900;
+      cursor: pointer;
+      background: rgba(42,103,255,.95);
+      color: #fff;
+    }
+    button:disabled { opacity: .55; cursor: default; }
+
+    /* marker */
     .bus-marker {
       width: 22px; height: 22px;
       border-radius: 999px;
@@ -49,7 +77,7 @@
       color: #fff;
       border-radius: 8px;
       padding: 2px 6px;
-      font-weight: 800;
+      font-weight: 900;
       font-size: 12px;
       white-space: nowrap;
     }
@@ -60,14 +88,21 @@
   <div id="map"></div>
 
   <div class="hud">
-    <div style="font-weight:800">Realtime stopCode=<span id="stopCodeTxt"></span></div>
+    <div class="hud-top">
+      <div class="hud-title">Realtime stopCode=<span id="stopCodeTxt"></span></div>
+      <div class="btns">
+        <button id="fitBtn" title="התאם לכל האוטובוסים">Fit</button>
+        <button id="refreshBtn" title="רענון עכשיו">רענן</button>
+      </div>
+    </div>
+
     <div id="status" class="small">טוען…</div>
     <div class="small"><span id="count">0</span> רכבים • עדכון כל 10 שניות</div>
   </div>
 
 <script>
 (() => {
-  // ===== WidgetWeb / JS-Widgets logger (כמו בדוגמה) =====
+  // ===== JS-Widgets logger fallback =====
   if (typeof __wweb2Log === 'undefined') {
     window.__wweb2Log = (str) => console.log(str);
   }
@@ -77,29 +112,32 @@
 
   const API_URL = `https://kavnav.com/api/realtime?stopCode=${encodeURIComponent(STOP_CODE)}`;
 
-  // ה-Proxy שנתת (Apps Script)
+  // Proxy (Apps Script)
   const PROXY_BASE = "https://script.google.com/macros/s/AKfycbxKfWtTeeoOJCoR_WD4JQhvDGHcE3j82tVHVQXqElwL9NVO9ourZxSHTA20GoBJKfmiLw/exec";
 
   const POLL_MS = 10_000;
 
-  const statusEl = document.getElementById("status");
-  const countEl  = document.getElementById("count");
+  const statusEl   = document.getElementById("status");
+  const countEl    = document.getElementById("count");
+  const refreshBtn = document.getElementById("refreshBtn");
+  const fitBtn     = document.getElementById("fitBtn");
 
   // ===== Map init =====
-  let map, tileLayer;
+  let map;
   const markers = new Map(); // vehicleId -> { marker, labelMarker }
+  let isLoading = false;
 
   function initMap() {
     map = L.map("map", { zoomControl: true }).setView([31.78, 35.22], 12);
 
-    tileLayer = L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
       maxZoom: 19,
       attribution: "&copy; OpenStreetMap contributors"
     }).addTo(map);
   }
 
   function proxyUrl(targetUrl) {
-    // אם אצלך הפרמטר שונה, זה המקום לשנות
+    // אם אצלך הפרמטר שונה — זה המקום לשנות
     return `${PROXY_BASE}?url=${encodeURIComponent(targetUrl)}`;
   }
 
@@ -123,18 +161,19 @@
   }
 
   function upsertVehicle(v) {
-    const id = v?.vehicleId;
+    const id  = v?.vehicleId;
     const lat = v?.geo?.location?.lat;
     const lon = v?.geo?.location?.lon;
     if (!id || typeof lat !== "number" || typeof lon !== "number") return;
 
     const bearing = v?.geo?.bearing ?? 0;
     const routeNumber = v?.trip?.gtfsInfo?.routeNumber ?? "";
+    const headsign = v?.trip?.gtfsInfo?.headsign ?? "";
 
     const popupHtml = `
       <div dir="rtl" style="min-width:220px">
-        <div style="font-weight:800;font-size:16px">קו ${escapeHtml(routeNumber || "?" )}</div>
-        <div style="opacity:.9">${escapeHtml(v?.trip?.gtfsInfo?.headsign ?? "")}</div>
+        <div style="font-weight:900;font-size:16px">קו ${escapeHtml(routeNumber || "?" )}</div>
+        <div style="opacity:.9">${escapeHtml(headsign)}</div>
         <hr style="border:0;border-top:1px solid rgba(0,0,0,.15)">
         <div><b>vehicleId:</b> ${escapeHtml(id)}</div>
         <div><b>operator:</b> ${escapeHtml(String(v?.operator ?? ""))}</div>
@@ -173,6 +212,13 @@
     }
   }
 
+  function fitToAll() {
+    const pts = [];
+    for (const { marker } of markers.values()) pts.push(marker.getLatLng());
+    if (pts.length === 0) return;
+    map.fitBounds(L.latLngBounds(pts).pad(0.20));
+  }
+
   async function fetchRealtime() {
     const url = proxyUrl(API_URL);
     const res = await fetch(url, { cache: "no-store" });
@@ -185,10 +231,20 @@
     catch { throw new Error("Response is not valid JSON (from proxy)."); }
   }
 
-  async function tick() {
+  async function tick({ fitAfter = false } = {}) {
+    if (isLoading) return;
+    isLoading = true;
+
+    // UI loading state
+    refreshBtn.disabled = true;
+    fitBtn.disabled = true;
+    const oldRefreshText = refreshBtn.textContent;
+    refreshBtn.textContent = "…";
+
     try {
       statusEl.className = "small ok";
       statusEl.textContent = "טוען נתונים…";
+
       const data = await fetchRealtime();
 
       const vehicles = Array.isArray(data?.vehicles) ? data.vehicles : [];
@@ -203,10 +259,17 @@
 
       const lastSnapshot = data?.lastSnapshot || data?.lastVehicleReport || "";
       statusEl.textContent = `עודכן: ${lastSnapshot || "עכשיו"} • מוצגים: ${markers.size}`;
+
+      if (fitAfter) fitToAll();
     } catch (e) {
       statusEl.className = "small err";
       statusEl.textContent = "שגיאה: " + (e?.message || String(e));
       __wweb2Log?.("Error: " + (e?.stack || e));
+    } finally {
+      refreshBtn.disabled = false;
+      fitBtn.disabled = false;
+      refreshBtn.textContent = oldRefreshText;
+      isLoading = false;
     }
   }
 
@@ -214,8 +277,13 @@
   window.addEventListener("DOMContentLoaded", () => {
     __wweb2Log?.("Widget start");
     initMap();
-    tick();
-    setInterval(tick, POLL_MS);
+
+    refreshBtn.addEventListener("click", () => tick());
+    fitBtn.addEventListener("click", () => fitToAll());
+
+    // first run + interval
+    tick({ fitAfter: true });
+    setInterval(() => tick(), POLL_MS);
   });
 })();
 </script>
