--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <!-- חשוב ל-JS-Widgets -->
   <meta name="js-widget-title" content="KavNav Realtime Map" />
-
   <title>KavNav Realtime Map</title>
 
   <!-- Leaflet (local) -->
@@ -17,42 +14,97 @@
     html, body { height: 100%; margin: 0; font-family: -apple-system, system-ui, Arial; }
     #map { height: 100%; width: 100%; }
 
+    /* Compact glass HUD */
     .hud {
-      position: absolute; top: 10px; left: 10px; z-index: 9999;
-      background: rgba(0,0,0,.72); color: #fff; padding: 10px 12px;
-      border-radius: 10px; max-width: 360px;
-    }
-    .hud-top {
-      display: flex;
-      align-items: center;
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      z-index: 9999;
+
+      display: grid;
+      grid-template-columns: 1fr auto;
       gap: 8px;
-      justify-content: space-between;
+      align-items: center;
+
+      padding: 10px 10px;
+      border-radius: 16px;
+      background: rgba(20,20,22,.55);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      color: #fff;
+      box-shadow: 0 10px 30px rgba(0,0,0,.25);
+      max-width: min(420px, calc(100vw - 20px));
     }
-    .hud-title {
+
+    .hud-main {
+      min-width: 0;
+      display: grid;
+      gap: 3px;
+    }
+
+    .title {
       font-weight: 900;
+      font-size: 14px;
+      line-height: 1.15;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 230px;
+      opacity: .98;
     }
 
-    .small { opacity: .9; font-size: 12px; margin-top: 6px; }
-    .ok { color: #9ef0a6; }
-    .err { color: #ffb3b3; }
+    .sub {
+      font-size: 12px;
+      opacity: .85;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
-    .btns { display:flex; gap:8px; }
-    button {
+    .pill {
+      display: inline-flex;
+      gap: 6px;
+      align-items: center;
+      padding: 2px 8px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.12);
+      border: 1px solid rgba(255,255,255,.12);
+    }
+
+    .dot {
+      width: 7px; height: 7px; border-radius: 999px;
+      background: #9ef0a6;
+      box-shadow: 0 0 0 3px rgba(158,240,166,.18);
+    }
+    .dot.err { background: #ffb3b3; box-shadow: 0 0 0 3px rgba(255,179,179,.18); }
+
+    .btns { display: flex; gap: 8px; }
+    .iconbtn {
+      width: 38px; height: 38px;
       border: 0;
-      border-radius: 10px;
-      padding: 6px 10px;
-      font-weight: 900;
+      border-radius: 12px;
       cursor: pointer;
-      background: rgba(42,103,255,.95);
+      display: grid;
+      place-items: center;
+      background: rgba(255,255,255,.12);
+      border: 1px solid rgba(255,255,255,.14);
       color: #fff;
+      transition: transform .08s ease, background .15s ease;
+      -webkit-tap-highlight-color: transparent;
     }
-    button:disabled { opacity: .55; cursor: default; }
+    .iconbtn:active { transform: translateY(1px); }
+    .iconbtn:disabled { opacity: .45; cursor: default; }
 
-    /* marker */
+    .icon {
+      width: 20px; height: 20px;
+      display: block;
+    }
+    .spin {
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+
+    /* Marker */
     .bus-marker {
       width: 22px; height: 22px;
       border-radius: 999px;
@@ -73,13 +125,27 @@
       filter: drop-shadow(0 2px 2px rgba(0,0,0,.15));
     }
     .bus-label {
-      background: rgba(0,0,0,.75);
+      background: rgba(0,0,0,.65);
       color: #fff;
-      border-radius: 8px;
-      padding: 2px 6px;
+      border-radius: 10px;
+      padding: 2px 7px;
       font-weight: 900;
       font-size: 12px;
       white-space: nowrap;
+      border: 1px solid rgba(255,255,255,.12);
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+    }
+
+    /* Hide Leaflet attribution if you want minimal UI (not recommended legally).
+       Better: keep it but smaller. */
+    .leaflet-control-attribution {
+      font-size: 10px !important;
+      opacity: .7;
+      background: rgba(255,255,255,.65) !important;
+      border-radius: 10px !important;
+      margin: 0 8px 8px 0 !important;
+      padding: 2px 6px !important;
     }
   </style>
 </head>
@@ -87,58 +153,93 @@
 <body>
   <div id="map"></div>
 
-  <div class="hud">
-    <div class="hud-top">
-      <div class="hud-title">Realtime stopCode=<span id="stopCodeTxt"></span></div>
-      <div class="btns">
-        <button id="fitBtn" title="התאם לכל האוטובוסים">Fit</button>
-        <button id="refreshBtn" title="רענון עכשיו">רענן</button>
+  <div class="hud" aria-label="Realtime HUD">
+    <div class="hud-main">
+      <div class="title" id="stationTitle">תחנה: <span id="stopCodeTxt"></span></div>
+      <div class="sub">
+        <span class="pill">
+          <span id="statusDot" class="dot"></span>
+          <span id="statusText">טוען…</span>
+        </span>
+        <span class="pill">רכבים: <b id="count">0</b></span>
+        <span class="pill">עודכן לפני: <b id="age">—</b></span>
       </div>
     </div>
 
-    <div id="status" class="small">טוען…</div>
-    <div class="small"><span id="count">0</span> רכבים • עדכון כל 10 שניות</div>
+    <div class="btns">
+      <button class="iconbtn" id="fitBtn" title="התאם למסך (Fit)">
+        <!-- corners/expand icon -->
+        <svg class="icon" viewBox="0 0 24 24" fill="none">
+          <path d="M9 4H5a1 1 0 0 0-1 1v4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M15 4h4a1 1 0 0 1 1 1v4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M9 20H5a1 1 0 0 1-1-1v-4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M15 20h4a1 1 0 0 0 1-1v-4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </button>
+
+      <button class="iconbtn" id="refreshBtn" title="רענן נתונים">
+        <!-- refresh icon -->
+        <svg class="icon" id="refreshIcon" viewBox="0 0 24 24" fill="none">
+          <path d="M20 12a8 8 0 1 1-2.34-5.66" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M20 4v6h-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </button>
+    </div>
   </div>
 
 <script>
 (() => {
-  // ===== JS-Widgets logger fallback =====
-  if (typeof __wweb2Log === 'undefined') {
-    window.__wweb2Log = (str) => console.log(str);
-  }
+  if (typeof __wweb2Log === 'undefined') window.__wweb2Log = (str) => console.log(str);
 
   const STOP_CODE = "4009";
-  document.getElementById("stopCodeTxt").textContent = STOP_CODE;
-
   const API_URL = `https://kavnav.com/api/realtime?stopCode=${encodeURIComponent(STOP_CODE)}`;
-
-  // Proxy (Apps Script)
   const PROXY_BASE = "https://script.google.com/macros/s/AKfycbxKfWtTeeoOJCoR_WD4JQhvDGHcE3j82tVHVQXqElwL9NVO9ourZxSHTA20GoBJKfmiLw/exec";
-
   const POLL_MS = 10_000;
 
-  const statusEl   = document.getElementById("status");
-  const countEl    = document.getElementById("count");
-  const refreshBtn = document.getElementById("refreshBtn");
-  const fitBtn     = document.getElementById("fitBtn");
+  const stopCodeTxt  = document.getElementById("stopCodeTxt");
+  const countEl      = document.getElementById("count");
+  const ageEl        = document.getElementById("age");
+  const statusText   = document.getElementById("statusText");
+  const statusDot    = document.getElementById("statusDot");
+  const refreshBtn   = document.getElementById("refreshBtn");
+  const refreshIcon  = document.getElementById("refreshIcon");
+  const fitBtn       = document.getElementById("fitBtn");
 
-  // ===== Map init =====
+  stopCodeTxt.textContent = STOP_CODE;
+
   let map;
-  const markers = new Map(); // vehicleId -> { marker, labelMarker }
+  const markers = new Map();
   let isLoading = false;
+  let lastOkTs = 0;
+
+  function proxyUrl(targetUrl) {
+    return `${PROXY_BASE}?url=${encodeURIComponent(targetUrl)}`;
+  }
 
   function initMap() {
     map = L.map("map", { zoomControl: true }).setView([31.78, 35.22], 12);
 
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      maxZoom: 19,
-      attribution: "&copy; OpenStreetMap contributors"
-    }).addTo(map);
-  }
+    // ===== Minimal / clean basemap =====
+    // Carto Positron (very clean)
+    // If blocked, switch to OSM below.
+    const carto = L.tileLayer(
+      "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png",
+      { maxZoom: 19, attribution: "&copy; OpenStreetMap contributors &copy; CARTO" }
+    );
 
-  function proxyUrl(targetUrl) {
-    // אם אצלך הפרמטר שונה — זה המקום לשנות
-    return `${PROXY_BASE}?url=${encodeURIComponent(targetUrl)}`;
+    const osm = L.tileLayer(
+      "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+      { maxZoom: 19, attribution: "&copy; OpenStreetMap contributors" }
+    );
+
+    // Try Carto first; if it errors, fallback to OSM.
+    carto.on("tileerror", () => {
+      __wweb2Log("Carto tiles blocked? Falling back to OSM.");
+      if (map.hasLayer(carto)) map.removeLayer(carto);
+      if (!map.hasLayer(osm)) osm.addTo(map);
+    });
+
+    carto.addTo(map);
   }
 
   function makeRotatedDivIcon(bearingDeg = 0) {
@@ -231,21 +332,34 @@
     catch { throw new Error("Response is not valid JSON (from proxy)."); }
   }
 
+  function setOkUI(msg) {
+    statusDot.classList.remove("err");
+    statusText.textContent = msg;
+  }
+  function setErrUI(msg) {
+    statusDot.classList.add("err");
+    statusText.textContent = msg;
+  }
+
+  function updateAge() {
+    if (!lastOkTs) { ageEl.textContent = "—"; return; }
+    const s = Math.max(0, Math.round((Date.now() - lastOkTs) / 1000));
+    ageEl.textContent = s + "s";
+  }
+
   async function tick({ fitAfter = false } = {}) {
     if (isLoading) return;
     isLoading = true;
 
-    // UI loading state
     refreshBtn.disabled = true;
     fitBtn.disabled = true;
-    const oldRefreshText = refreshBtn.textContent;
-    refreshBtn.textContent = "…";
+    refreshIcon.classList.add("spin");
 
     try {
-      statusEl.className = "small ok";
-      statusEl.textContent = "טוען נתונים…";
+      setOkUI("טוען…");
 
       const data = await fetchRealtime();
+      lastOkTs = Date.now();
 
       const vehicles = Array.isArray(data?.vehicles) ? data.vehicles : [];
       countEl.textContent = String(vehicles.length);
@@ -258,32 +372,31 @@
       pruneMissing(seen);
 
       const lastSnapshot = data?.lastSnapshot || data?.lastVehicleReport || "";
-      statusEl.textContent = `עודכן: ${lastSnapshot || "עכשיו"} • מוצגים: ${markers.size}`;
+      setOkUI(`עודכן ${lastSnapshot ? "• " + lastSnapshot : ""}`.trim());
 
       if (fitAfter) fitToAll();
     } catch (e) {
-      statusEl.className = "small err";
-      statusEl.textContent = "שגיאה: " + (e?.message || String(e));
-      __wweb2Log?.("Error: " + (e?.stack || e));
+      setErrUI("שגיאה: " + (e?.message || String(e)));
+      __wweb2Log("Error: " + (e?.stack || e));
     } finally {
       refreshBtn.disabled = false;
       fitBtn.disabled = false;
-      refreshBtn.textContent = oldRefreshText;
+      refreshIcon.classList.remove("spin");
       isLoading = false;
+      updateAge();
     }
   }
 
-  // ===== start =====
   window.addEventListener("DOMContentLoaded", () => {
-    __wweb2Log?.("Widget start");
+    __wweb2Log("Widget start");
     initMap();
 
     refreshBtn.addEventListener("click", () => tick());
     fitBtn.addEventListener("click", () => fitToAll());
 
-    // first run + interval
     tick({ fitAfter: true });
     setInterval(() => tick(), POLL_MS);
+    setInterval(updateAge, 1000);
   });
 })();
 </script>
