--- a/index.html
+++ b/index.html
@@ -19,89 +19,42 @@
       --text: #fff;
       --muted: rgba(255,255,255,.82);
       --err: #ffb3b3;
+
+      /* smaller, widget-friendly typography */
+      --fs-xxs: clamp(10px, 1.6vw, 12px);
+      --fs-xs:  clamp(11px, 1.8vw, 13px);
+      --fs-sm:  clamp(12px, 2.0vw, 14px);
+      --fs-md:  clamp(13px, 2.2vw, 15px);
     }
 
-    /* כמו בקובץ שלך: גוף תופס את כל הווידג׳ט */
-    body{
-      font-family: -apple-system,'Helvetica Neue',system-ui,Arial;
-      margin:0;
-      width:100%;
-      position:absolute;
-      height:100vh;                 /* key */
+    *{ box-sizing: border-box; }
+
+    /* IMPORTANT: no manual calc heights; pure flex layout prevents overflow */
+    html, body{
+      height: 100%;
+      margin: 0;
       background: var(--bg);
-      overflow:hidden;
+      overflow: hidden;
       color: var(--text);
+      font-family: -apple-system,'Helvetica Neue',system-ui,Arial;
     }
 
-    /* Top bar (רק שעה + רענון) */
-    .topbar{
-      width:100%;
+    body{
       display:flex;
-      align-items:center;
-      justify-content: space-between;
-      padding: 2.4vh 2.2vw 1.2vh 2.2vw;   /* vh/vw */
-      box-sizing:border-box;
-      gap: 2vw;
+      flex-direction: column;
+      height: 100vh;
     }
-    .timepill{
-      display:inline-flex;
-      align-items:center;
-      gap: 1.2vw;
-      padding: 1.2vh 2.2vw;
-      border-radius: 999px;
-      background: var(--glass);
-      border: 1px solid var(--border);
-      font-weight: 900;
-      font-size: 3.6vw;                 /* vw */
-      line-height: 1;
-      white-space: nowrap;
-      font-variant-numeric: tabular-nums;
-    }
-    .timepill .muted{ opacity:.9; }
 
-    /* Refresh button as <a> with wweb2 overlay vars כמו בדוגמה */
-    .refresh-btn{
-      text-decoration:none;
-      color: var(--text);
-      display:grid;
-      place-items:center;
-
-      /* sizing like the example: size derived from vh/vw */
-      width: 8.2vh;
-      aspect-ratio: 1;
-
-      background: rgba(255,255,255,.10);
-      border: 1px solid rgba(255,255,255,.14);
-      border-radius: 26%;
-
-      /* JS-Widgets overlay vars (כמו בקובץ שלך) */
-      --wweb2-overlay-btn-color: rgba(0,0,0,0.0);
-      --wweb2-overlay-btn-press-color: rgba(255,255,255,0.20);
-      --wweb2-overlay-btn-corner-radius: 26%;
-      --wweb2-overlay-btn-padding: -20%;
-
-      box-shadow: 0 10px 25px rgba(0,0,0,.22);
-    }
-    .refresh-btn svg{
-      width: 4.8vh;
-      height: 4.8vh;
-      opacity: .95;
-    }
-    .spin{ animation: spin .9s linear infinite; transform-origin: 50% 50%; }
-    @keyframes spin { from { transform: rotate(0deg);} to { transform: rotate(360deg);} }
-
-    /* MAIN: side-by-side always (no wrap) */
+    /* MAIN: side-by-side always */
     .row{
-      display:flex;                 /* כמו בדוגמה */
+      flex: 1 1 auto;
+      min-height: 0;            /* critical for flex children */
+      display:flex;
       flex-direction: row;
-      flex-wrap: nowrap;            /* never stack */
-      align-items: stretch;
-      justify-content: center;
-      gap: 2.2vw;
-      padding: 0 2.2vw 2.2vh 2.2vw;
-      box-sizing: border-box;
-      height: calc(100vh - 10vh);   /* roughly: total minus topbar */
-      min-height: 0;
+      flex-wrap: nowrap;        /* never stack */
+      gap: 1.6vw;
+      padding: 1.2vh 1.6vw;
+      overflow: hidden;
     }
 
     /* Left: stops */
@@ -112,7 +65,7 @@
 
       background: var(--glass);
       border: 1px solid var(--border);
-      border-radius: 4.2vw;         /* vw */
+      border-radius: 18px;
       overflow: hidden;
 
       display:flex;
@@ -120,21 +73,20 @@
     }
 
     .stops-inner{
-      padding: 1.8vh 2.2vw;
+      padding: 1.2vh 1.4vw;
       display:flex;
       flex-direction: column;
-      gap: 1.6vh;
+      gap: 1.0vh;
       min-height: 0;
-      overflow:hidden;              /* no scroll in widget */
-      box-sizing:border-box;
-      height:100%;
+      overflow:hidden;          /* no scroll in widget */
+      height: 100%;
     }
 
     .stop-card{
       background: rgba(255,255,255,.08);
       border: 1px solid rgba(255,255,255,.10);
-      border-radius: 3.6vw;
-      padding: 1.6vh 2.0vw;
+      border-radius: 14px;
+      padding: 1.0vh 1.2vw;
       overflow:hidden;
     }
 
@@ -142,61 +94,70 @@
       display:flex;
       align-items: baseline;
       justify-content: space-between;
-      gap: 2vw;
+      gap: 1.4vw;
       white-space: nowrap;
       overflow:hidden;
     }
+
     .stop-name{
       font-weight: 900;
-      font-size: 3.8vw;
+      font-size: var(--fs-md);
       text-overflow: ellipsis;
       overflow:hidden;
       max-width: 72%;
+      line-height: 1.15;
     }
+
     .stop-dist{
       font-weight: 800;
-      font-size: 3.1vw;
+      font-size: var(--fs-xs);
       opacity: .9;
       font-variant-numeric: tabular-nums;
+      white-space: nowrap;
     }
 
     .arr{
-      margin-top: 1.2vh;
+      margin-top: 0.9vh;
       display:flex;
       flex-direction: column;
-      gap: 1.0vh;
+      gap: 0.7vh;
     }
 
     .arr-row{
       display:flex;
       justify-content: space-between;
       align-items:center;
-      gap: 2vw;
-      padding: 1.0vh 1.6vw;
-      border-radius: 2.8vw;
+      gap: 1.2vw;
+      padding: 0.7vh 1.0vw;
+      border-radius: 12px;
       background: rgba(0,0,0,.18);
       border: 1px solid rgba(255,255,255,.08);
       font-variant-numeric: tabular-nums;
       overflow:hidden;
       white-space: nowrap;
     }
+
     .arr-line{
       font-weight: 900;
-      font-size: 3.2vw;
+      font-size: var(--fs-sm);
       overflow:hidden;
       text-overflow: ellipsis;
-      max-width: 68%;
+      max-width: 70%;
       opacity:.98;
     }
+
     .arr-eta{
       font-weight: 900;
-      font-size: 3.2vw;
+      font-size: var(--fs-sm);
       opacity:.98;
+      white-space: nowrap;
     }
+
     .arr-empty{
       justify-content:center;
       opacity:.82;
       font-weight: 800;
+      font-size: var(--fs-sm);
     }
 
     /* Right: map */
@@ -208,100 +169,146 @@
 
       background: rgba(255,255,255,.06);
       border: 1px solid rgba(255,255,255,.10);
-      border-radius: 4.2vw;
+      border-radius: 18px;
       overflow: hidden;
       box-shadow: 0 10px 25px rgba(0,0,0,.22);
     }
-    #map{
+
+    #map{ position:absolute; inset:0; }
+
+    /* Map overlay controls (time + refresh) */
+    .mapHUD{
       position:absolute;
-      inset:0;
+      top: 0.9vh;
+      left: 0.9vw;
+      z-index: 1000;
+      display:flex;
+      align-items:center;
+      gap: 0.9vw;
+      pointer-events: none; /* only buttons enable pointer */
     }
 
+    .hud-pill{
+      pointer-events: none;
+      display:inline-flex;
+      align-items:center;
+      gap: 0.6vw;
+      padding: 0.7vh 1.0vw;
+      border-radius: 999px;
+      background: rgba(0,0,0,.38);
+      border: 1px solid rgba(255,255,255,.14);
+      backdrop-filter: blur(10px);
+      font-weight: 900;
+      font-size: var(--fs-xxs);
+      white-space: nowrap;
+      font-variant-numeric: tabular-nums;
+    }
+
+    /* Refresh button uses wweb2 overlay vars (like your example) */
+    .hud-btn{
+      pointer-events: auto;
+      text-decoration:none;
+      color: var(--text);
+      display:grid;
+      place-items:center;
+
+      width: 34px;
+      height: 34px;
+
+      background: rgba(0,0,0,.38);
+      border: 1px solid rgba(255,255,255,.14);
+      border-radius: 12px;
+
+      --wweb2-overlay-btn-color: rgba(0,0,0,0.0);
+      --wweb2-overlay-btn-press-color: rgba(255,255,255,0.20);
+      --wweb2-overlay-btn-corner-radius: 12px;
+      --wweb2-overlay-btn-padding: -22%;
+
+      backdrop-filter: blur(10px);
+    }
+
+    .hud-btn svg{
+      width: 18px;
+      height: 18px;
+      opacity: .95;
+    }
+
+    .spin{ animation: spin .9s linear infinite; transform-origin: 50% 50%; }
+    @keyframes spin { from { transform: rotate(0deg);} to { transform: rotate(360deg);} }
+
+    /* Leaflet attribution small */
     .leaflet-control-attribution{
-      font-size: 2.0vw !important;
-      opacity: .55;
+      font-size: 10px !important;
+      opacity: .50;
       background: rgba(255,255,255,.65) !important;
       border-radius: 999px !important;
-      padding: .4vh 1.2vw !important;
-      margin: 0 1.8vw 1.4vh 0 !important;
+      padding: 2px 6px !important;
+      margin: 0 10px 10px 0 !important;
     }
     .leaflet-control-zoom a{
-      width: 6.0vh !important;
-      height: 6.0vh !important;
-      line-height: 6.0vh !important;
+      width: 30px !important;
+      height: 30px !important;
+      line-height: 30px !important;
     }
 
     /* Markers */
     .stopBadge{
-      width: 6.0vh;
-      height: 6.0vh;
+      width: 24px;
+      height: 24px;
       border-radius: 999px;
       display:grid;
       place-items:center;
       font-weight: 900;
-      font-size: 3.2vw;
+      font-size: 13px;
       color:#fff;
       background: rgba(255,255,255,.18);
       border: 2px solid rgba(255,255,255,.70);
       box-shadow: 0 8px 18px rgba(0,0,0,.25);
     }
 
-    /* Loading overlay: we hide the UI until data ready */
+    /* Loading overlay */
     .loading{
       position:absolute;
       inset:0;
       display:grid;
       place-items:center;
-      z-index: 999999;
+      z-index: 2000;
       background: linear-gradient(180deg, rgba(15,16,18,.96), rgba(15,16,18,.84));
       text-align:center;
-      padding: 4vh 5vw;
-      box-sizing: border-box;
+      padding: 3vh 4vw;
     }
+
     .loading .title{
       font-weight: 900;
-      font-size: 4.2vw;
+      font-size: var(--fs-md);
     }
     .loading .sub{
-      margin-top: 1.2vh;
+      margin-top: 0.8vh;
       font-weight: 800;
-      font-size: 3.2vw;
+      font-size: var(--fs-xs);
       opacity: .78;
     }
     .loading .err{
-      margin-top: 1.8vh;
+      margin-top: 1.4vh;
       font-weight: 900;
-      font-size: 3.0vw;
+      font-size: var(--fs-xs);
       color: var(--err);
       white-space: pre-wrap;
       text-align: right;
     }
 
-    /* Extra small heights: slightly tighten */
-    @media (max-height: 420px){
-      .timepill{ font-size: 3.2vw; }
-      .stop-name{ font-size: 3.4vw; }
-      .arr-line,.arr-eta{ font-size: 2.9vw; }
+    /* extra short widgets: tighten a bit more */
+    @media (max-height: 360px){
+      .row{ padding: 0.9vh 1.4vw; gap: 1.2vw; }
+      .stops-inner{ padding: 1.0vh 1.2vw; gap: 0.8vh; }
+      .stop-card{ padding: 0.9vh 1.0vw; }
+      .arr-row{ padding: 0.6vh 0.9vw; }
+      .hud-btn{ width: 32px; height: 32px; }
     }
   </style>
 </head>
 
 <body>
-  <div class="topbar">
-    <div class="timepill">
-      <span class="muted">עודכן</span>
-      <span id="updatedTime">—</span>
-    </div>
-
-    <!-- <a> button with wweb2 overlay vars -->
-    <a class="refresh-btn" id="refreshBtn" href="#action=refresh" onclick="event.preventDefault(); window.__manualRefresh?.();">
-      <svg id="refreshIcon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-        <path d="M20 12a8 8 0 1 1-2.34-5.66" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        <path d="M20 4v6h-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </a>
-  </div>
-
   <div class="row" id="mainRow" style="visibility:hidden;">
     <div class="stops">
       <div class="stops-inner" id="stopsInner"></div>
@@ -309,6 +316,19 @@
 
     <div class="mapWrap">
       <div id="map"></div>
+
+      <!-- HUD inside map -->
+      <div class="mapHUD">
+        <div class="hud-pill"><span style="opacity:.85;">עודכן</span> <span id="updatedTime">—</span></div>
+
+        <a class="hud-btn" id="refreshBtn" href="#action=refresh" onclick="event.preventDefault(); window.__manualRefresh?.();">
+          <svg id="refreshIcon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <path d="M20 12a8 8 0 1 1-2.34-5.66" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M20 4v6h-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </a>
+      </div>
+
       <div class="loading" id="loading">
         <div class="title">טוען נתונים…</div>
         <div class="sub">מיקום → תחנות קרובות → זמני הגעה</div>
@@ -319,16 +339,15 @@
 
 <script>
 (() => {
-  // ---------- JS-Widgets compatibility ----------
   if (typeof __wweb2Log === 'undefined') window.__wweb2Log = (s) => console.log(s);
 
-  // IMPORTANT: make widget wait until we say ready
+  // Keep widget alive until ready
   window.__WIDGET_READY = false;
-  window.__wweb2WaitMillisecondsToWidgetIsReady = function(currentDelayMs) {
+  window.__wweb2WaitMillisecondsToWidgetIsReady = function() {
     return window.__WIDGET_READY ? 0 : 200;
   };
 
-  // ---------- CONFIG ----------
+  // CONFIG
   const NEARBY_BASE = "https://script.google.com/macros/s/AKfycbwP9zZV4XDe8tsAdGAr3w3E8paS0-eQagw9b7gTnJBwYvqVbqZsbuFEN7FFPD7t-WeL/exec";
   const REALTIME_BASE = "https://kavnav.com/api/realtime";
   const PROXY_BASE = "https://script.google.com/macros/s/AKfycbxKfWtTeeoOJCoR_WD4JQhvDGHcE3j82tVHVQXqElwL9NVO9ourZxSHTA20GoBJKfmiLw/exec";
@@ -339,7 +358,6 @@
 
   const MAX_ARRIVALS_PER_STOP = 2;
 
-  // ---------- DOM ----------
   const $ = (id) => document.getElementById(id);
   const updatedTimeEl = $("updatedTime");
   const stopsInner = $("stopsInner");
@@ -348,12 +366,10 @@
   const refreshIcon = $("refreshIcon");
   const mainRow = $("mainRow");
 
-  // ---------- STATE ----------
   let map = null;
   let userMarker = null;
   let stopMarkers = [];
 
-  // ---------- HELPERS ----------
   function escapeHtml(s){
     return String(s)
       .replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;")
@@ -450,10 +466,8 @@
     return best ? fmtTimeOnly(best) : fmtTimeOnly(new Date());
   }
 
-  // ---------- UI ----------
   function renderStops(stopsWithArrivals){
     const now = Date.now();
-
     const cards = stopsWithArrivals.slice(0,2).map((s, idx) => {
       const name = s.stopName || s.name || s.stop_name || `תחנה ${s.stopCode || s.stop_code || "?"}`;
       const dist = fmtDist(s.distanceMeters);
@@ -487,13 +501,9 @@
     stopsInner.innerHTML = cards;
   }
 
-  // ---------- MAP ----------
   function ensureMap(){
     if (map) return;
-
     map = L.map("map", { zoomControl: true }).setView(FALLBACK_CENTER, FALLBACK_ZOOM);
-
-    // Clean minimal tiles (כמו בקוד שלך)
     L.tileLayer("https://cartodb-basemaps-a.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png", {
       maxZoom: 19,
       attribution: ""
@@ -529,8 +539,7 @@
       iconAnchor: [12,12]
     });
 
-    const m = L.marker([lat, lon], { icon }).addTo(map);
-    stopMarkers.push(m);
+    stopMarkers.push(L.marker([lat, lon], { icon }).addTo(map));
   }
 
   function fitToUserAndStops(user, stops){
@@ -538,20 +547,15 @@
 
     const pts = [];
     if (user && isFinite(user.lat) && isFinite(user.lon)) pts.push([user.lat, user.lon]);
-
     for (const s of stops){
       const lat = Number(s.lat), lon = Number(s.lon);
       if (isFinite(lat) && isFinite(lon)) pts.push([lat, lon]);
     }
 
-    if (pts.length >= 2) {
-      map.fitBounds(L.latLngBounds(pts).pad(0.18));
-    } else if (pts.length === 1) {
-      map.setView(pts[0], USER_ZOOM, { animate:false });
-    }
+    if (pts.length >= 2) map.fitBounds(L.latLngBounds(pts).pad(0.18));
+    else if (pts.length === 1) map.setView(pts[0], USER_ZOOM, { animate:false });
   }
 
-  // ---------- LOADING + READY ----------
   function showError(msg){
     errBox.style.display = "block";
     errBox.textContent = msg;
@@ -560,7 +564,6 @@
     errBox.style.display = "none";
     errBox.textContent = "";
   }
-
   function setLoading(on){
     loadingEl.style.display = on ? "grid" : "none";
   }
@@ -573,12 +576,10 @@
 
     refreshIcon.classList.add("spin");
     try{
-      // 1) location
       const my = await getMyLocation();
 
-      // 2) nearby stops
       const nearby = await fetchNearbyStops(my.lat, my.lon);
-      if (!nearby?.ok) throw new Error("nearbyStops ok=false: " + JSON.stringify(nearby));
+      if (!nearby?.ok) throw new Error("nearbyStops ok=false");
       const stops = Array.isArray(nearby.results) ? nearby.results : [];
       if (stops.length === 0) throw new Error("No nearby stops found");
 
@@ -591,7 +592,6 @@
       if (!codeA) throw new Error("Stop #1 missing stopCode");
       if (stopB && !codeB) throw new Error("Stop #2 missing stopCode");
 
-      // 3) realtime (parallel)
       const [rtA, rtB] = await Promise.all([
         fetchRealtimeForStop(codeA),
         stopB ? fetchRealtimeForStop(codeB) : Promise.resolve(null)
@@ -600,7 +600,6 @@
       const arrivalsA = extractArrivalsForStop(rtA, codeA, MAX_ARRIVALS_PER_STOP);
       const arrivalsB = stopB && rtB ? extractArrivalsForStop(rtB, codeB, MAX_ARRIVALS_PER_STOP) : [];
 
-      // update time (hour only)
       updatedTimeEl.textContent = computeUpdatedTimeFromRealtime(rtA, rtB);
 
       const outStops = [
@@ -608,32 +607,27 @@
       ];
       if (stopB) outStops.push(Object.assign({}, stopB, { stopCode: String(codeB), arrivals: arrivalsB }));
 
-      // render stops
       renderStops(outStops);
 
-      // map
       ensureMap();
       setUserMarker(my.lat, my.lon);
       clearStopMarkers();
       outStops.slice(0,2).forEach((s, i) => addStopMarker(i+1, s));
       fitToUserAndStops(my, outStops.slice(0,2));
 
-      // show UI only when everything ready
       mainRow.style.visibility = "visible";
       setLoading(false);
-
-      window.__WIDGET_READY = true;  // <- widget can finish now
+      window.__WIDGET_READY = true;
     } catch(e){
       showError(e?.message || String(e));
       setLoading(true);
-      window.__WIDGET_READY = true;  // don't hang forever
+      window.__WIDGET_READY = true; // don't hang forever
       __wweb2Log?.("Error: " + (e?.stack || e));
     } finally {
       refreshIcon.classList.remove("spin");
     }
   }
 
-  // expose manual refresh (for <a onclick>)
   window.__manualRefresh = () => loadAllAndRender();
 
   window.addEventListener("DOMContentLoaded", async () => {
